# lung-series-segmentation

./: CMakeLists.txt  README.md  lung_seg.cxx
